--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
           <h4>PHARRELL WILLIAMS</h4>
           <!-- Level 2 'HAPPY' Header -->
-          <h3><b>HAPPY</b></h3>
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4>|FROM DESPICABLE ME...|</h4>
+          <h2><b>HAPPY</b></h2>
+          <!-- Level 4 '| FROM DESPICABLE ME 2' Header -->
+          <h4>| FROM DESPICABLE ME 2|</h4>
         </div>
       </div>
 
       <div id="back" class="album">
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        <h3>| FROM DESPICABLE ME...|</h3>
+        <h3>| FROM DESPICABLE ME 2|</h3>
         <!-- Level 1 'HAPPY' Header -->
-        <h2>HAPPY</h2>
+        <h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
         <h3>WRITTEN BY...</h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
@@ -39,16 +39,16 @@
         </p>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <h4><span
-          >PHARRELLWILLIAMS.COM
+          >PHARRELLWILLIAMS.COM </span>
           <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-          <img src="./images/columbia-logo.png" alt="" />
+          <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="" />
           <!-- span text 'COLUMBIARECORDS.COM' -->
-          COLUMBIARECORDS.COM</span
+        <span>  COLUMBIARECORDS.COM</span
         ></h4>
         <br />
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-        <img src="./images/sony-logo.png" alt="" />
+        <span><img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="" /></span>
       </div>
     </div>
   </body>
